# homework_vega

./: CMakeLists.txt  main.cpp  my_add.cpp  my_add.h  test_add.cpp
.github/workflows/: test.yaml
github/workflows/: test.yaml
